完成了用户登录登出功能

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,3 +1,4 @@
+// 全局使用的字体图标文件
 @import "./icon.less";
 
 body {
@@ -6,7 +7,7 @@ body {
   
   .page-nav-bar {
     background-color: #3296fa !important;
-    .van-nav-bar__title {
+    .van-nav-bar__title, .van-icon {
       color: #fff;
     }
   }
